<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to the factory mode</string>
    <string name="app_name">Factory mode</string>
    <string name="Settings">Settings</string>
    <string name="AutoTest">Fixture test</string>
    <string name="AllTest">Machine testing</string>
    <string name="Packageerror">Error, can not find the application package!</string>
    <string name="PackageIerror">An internal error</string>
    <string name="BatteryLog">Power supply</string>
    <string name="battery_info_status_label">State of charge:</string>
    <string name="battery_info_scale_label">Battery charge:</string>
    <string name="battery_info_level_label">Current electricity:</string>
    <string name="battery_info_health_label">Power status:</string>
    <string name="battery_info_technology_label">Power Technology:</string>
    <string name="battery_info_voltage_label">Current voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Power supply temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Since the start of time:</string>
    <string name="battery_info_awake_battery">Wake-up time of the battery:</string>
    <string name="battery_info_awake_plugged">Charging time:</string>
    <string name="battery_info_screen_on">Screen to open the time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charged</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Well</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Voltage is too high</string>
    <string name="battery_info_health_unspecified_failure">An unknown error</string>
    <string name="TouchScreen">Touch screen</string>
    <string name="PointTest">Point test</string>
    <string name="LineTest">Line test</string>
    <string name="Result">View Results</string>
    <string name="Offset">Offset：</string>
    <string name="TouchComplete">The test is completed</string>
    <string name="Error">Error</string>
    <string name="DrawError">Draw error！</string>
    <string name="Again">Retry</string>
    <string name="GoOn">Continue</string>
    <string name="BackLight">Backlight</string>
    <string name="Display_lcd_Text">Backlight</string>
    <string name="Memory">Memory</string>
    <string name="Audio">Sound</string>
    <string name="Camera">Camera</string>
    <string name="Camera_takepic">Photograph</string>
    <string name="Camera_notfound">Front camera not detected</string>
    <string name="WiFi">WLAN</string>
    <string name="WiFi_success">The test is successful</string>
    <string name="WiFi_failed">Test fails</string>
    <string name="WiFi_scaning">Are looking for in...</string>
    <string name="WiFi_info_closeing">WLAN is closing in...</string>
    <string name="WiFi_info_close">WLAN has been closed</string>
    <string name="WiFi_info_opening">WLAN is open</string>
    <string name="WiFi_info_open">WLAN is already open</string>
    <string name="WiFi_info_unknown">Unknown state</string>
    <string name="WiFi_connecting">Being connected...</string>
    <string name="WiFi_notfound_openap">Not found an open connection points</string>
    <string name="HeadSet">Headset</string>
    <string name="HeadSet_plugged">Headphones into</string>
    <string name="HeadSet_unplugged">Headset pull out</string>
    <string name="HeadSet_tips">Please plug in your headphones to test</string>
    <string name="HeadSet_hook">Pressing the headphones Hook key!</string>
    <string name="HeadSet_hook_message">Please confirm long press the headset Hook key to make a call whether you can hang up?</string>
    <string name="GPS">GPS</string>
    <string name="GPS_open">Open GPS</string>
    <string name="GPS_connect">GPS is turned on, the connection is being made. . .</string>
    <string name="GPS_normal">GPS Properly</string>
    <string name="GPS_satelliteNum">GPS Satellite number search :</string>
    <string name="GPS_Signal">GPS Signal :</string>
    <string name="GPS_Success">Success</string>
    <string name="GPS_time">Time-consuming： %s 分</string>
    <string name="Sensor">Sensor</string>
    <string name="Vibrator">Shock</string>
    <string name="Signal">Phone</string>
    <string name="YGPS">YGPS</string>
    <string name="AGPS">AGPS</string>
    <string name="Microphone">Microphone</string>
    <string name="Mic_start">Start recording</string>
    <string name="Mic_stop">Stop recording and playback</string>
    <string name="Mic_play">Start playing</string>
    <string name="Mic_operation">Microphone options</string>
    <string name="Speaker_operation">Speaker Selection</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Bluetooth_open">Bluetooth is already open</string>
    <string name="Bluetooth_opening">Bluetooth is open ...</string>
    <string name="Bluetooth_scaning">Are looking for ...</string>
    <string name="Bluetooth_mac">MAC address:</string>
    <string name="Bluetooth_scan_success">Find completed</string>
    <string name="GSensor">Gravity sensor</string>
    <string name="GSensor_info">Erected, flat, Celi observed gravity change!</string>
    <string name="MSensor">Magnetic sensors</string>
    <string name="MSensor_default_text">Unknown data</string>
    <string name="MSensor_North">North</string>
    <string name="MSensor_East">East</string>
    <string name="MSensor_South">South</string>
    <string name="MSensor_West">West</string>
    <string name="MSensor_north_east">North east</string>
    <string name="MSensor_south_east">South easterly</string>
    <string name="MSensor_south_west">South west</string>
    <string name="MSensor_north_west">North west</string>
    <string name="LSensor">Light sensor</string>
    <string name="LSensor_default_text">Unknown data</string>
    <string name="LSensor_accuracy">Accuracy:</string>
    <string name="LSensor_value">Numerical:</string>
    <string name="LSensor_tips">Numerical changes observed in the bright and dark areas!</string>
    <string name="LCD_increase">Strong backlight</string>
    <string name="LCD_weaken">Weak backlight</string>
    <string name="Success">Success</string>
    <string name="Failed">Failure</string>
    <string name="psensor_hello">PSensor Verification</string>
    <string name="psensor_app_name">Distance sensor</string>
    <string name="proximity">Approaching :</string>
    <string name="tips">To place your hands and leave the sensing area to watch the change in the value!</string>
    <string name="Earphone">Earpiece</string>
    <string name="battery_name">Power supply</string>
    <string name="touchscreen_name">Touch screen</string>
    <string name="speaker_name">Horn</string>
    <string name="wifi_name">WLAN</string>
    <string name="bluetooth_name">Bluetooth</string>
    <string name="headset_name">Headphones</string>
    <string name="earphone_name">Handset</string>
    <string name="gps_name">GPS</string>
    <string name="vibrator_name">Vibration</string>
    <string name="telephone_name">Phone</string>
    <string name="backlight_name">Backlight</string>
    <string name="memory_name">Memory</string>
    <string name="gsensor_name">Gravity sensing</string>
    <string name="msensor_name">Magnetic sensing</string>
    <string name="lsensor_name">Optical sensing</string>
    <string name="psensor_name">Distance sensor</string>
 <!--     <string name="camera_name">Back camera</string>-->
    <string name="camera_name">Camera</string>
    <string name="sdcard_name">T card</string>
    <string name="fmradio_name">Radio</string>
    <string name="KeyCode_name">Button</string>
    <string name="lcd_name">LCD</string>
    <string name="sim_name">SIM card</string>
    <string name="microphone_name">Microphone</string>
    <string name="subcamera_name">Front camera</string>
    <string name="headsethook_name">Headphones Hook</string>
    <string name="sdcard">Tcard</string>
    <string name="sdcard_tips_success">SD card detected</string>
    <string name="sdcard_tips_failed">SD card not measured</string>
    <string name="sdcard_totalsize">Total capacity:</string>
    <string name="sdcard_freesize">Remaining capacity:</string>
    <string name="FMRadio">Radio</string>
    <string name="FMRadio_notice">Select</string>
    <string name="KeyCode">Button</string>
    <string name="KeyCode_info">Start button</string>
    <string name="LCD">LCD</string>
    <string name="SimCard">SIM</string>
    <string name="print_name">printer</string>
    <string name="rfid_name">rfid</string>
    <string name="finger_name">FingerPrint</string>
    <string name="sim1_info_ok">SIM1:Normal</string>
    <string name="sim1_info_failed">SIM1:Not found</string>
    <string name="sim2_info_ok">SIM2:Normal</string>
    <string name="sim2_info_failed">SIM2:Not found</string>
    <string name="sim_info_ok">SIM:Normal</string>
    <string name="sim_info_failed">SIM:Not found</string>
    <string name="Report">Test Report</string>
    <string name="report_ok">The test is successful entry:</string>
    <string name="report_failed">Test failed items:</string>
    <string name="report_notest">Untested items:</string>
    <string name="menu_exit">Exit the test</string>
    <string name="Mic_player">Stop and play</string>
    <string name="Fmsearch">FM station search</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="Bluetooth_closed">Bluetooth is turned off</string>
    <string name="okok">Determine</string>
    <string name="stopplayer">Stop playing</string>
    <string name="memorytotal">Total memory：</string>
    <string name="memoryfree">Remaining memory</string>
    <string name="GSensor_tips">Shaking the phone changes observed XYZ values</string>
    <string name="version_mode">Version</string>
    <string name="values1">AP : N7100XXALIH</string>
    <string name="values2">CP : N7100XXALIH</string>
    <string name="values3">CSC : N7100OJVALIA</string>
    
    <string name="begin_print">Begin test</string>
    <string name="print_test_text">"Line 1：abdeefghijklmnopqrstuvwxyz1234567890 \nLine2： ABDEEFGHIJKLMNOPQRSTUVWXYZ \nLine3: []{}-=()*^%$#!~+_>',"</string>
    <string name="name">name:</string>
    <string name="sex">sex:</string>
    <string name="nation">nation:</string>
    <string name="birthday">birthday:</string>
    <string name="addr">addr:</string>
    <string name="carNumber">carNumber:</string>
    <string name="deparment">deparment:</string>
    <string name="yxqx">valid date</string>
    <string name="header_image_hint">head image</string>
    <string name="product_mode">product mode</string>
    <string name="rfid_app_title">rfid test</string>
    <string name="finger_text_get_sysinfo">show sysinfo</string>
    <string name="finger_text_connect_test">connection test</string>
    <string name="finger_text_erase_flash">erase flash</string>
    <string name="finger_text_get_image">get finger image</string>
    
</resources>
