<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/info_layout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_status_label" style="@style/info_label" />
        <TextView android:id="@id/status" style="@style/info_value" />
    </LinearLayout>
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_level_label" style="@style/info_label" />
        <TextView android:id="@id/level" style="@style/info_value" />
    </LinearLayout>
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_scale_label" style="@style/info_label" />
        <TextView android:id="@id/scale" style="@style/info_value" />
    </LinearLayout>
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_health_label" style="@style/info_label" />
        <TextView android:id="@id/health" style="@style/info_value" />
    </LinearLayout>
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_voltage_label" style="@style/info_label" />
        <TextView android:id="@id/voltage" style="@style/info_value" />
    </LinearLayout>
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_temperature_label" style="@style/info_label" />
        <TextView android:id="@id/temperature" style="@style/info_value" />
    </LinearLayout>
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_technology_label" style="@style/info_label" />
        <TextView android:id="@id/technology" style="@style/info_value" />
    </LinearLayout>
    <LinearLayout style="@style/entry_layout">
        <TextView android:text="@string/battery_info_uptime" style="@style/info_label" />
        <TextView android:id="@id/uptime" style="@style/info_value" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="25.0dip" android:id="@id/battery_bt_ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Success" android:layout_weight="0.8" />
        <Button android:textSize="25.0dip" android:id="@id/battery_bt_failed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Failed" android:layout_weight="0.2" />
    </LinearLayout>
</LinearLayout>
