<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:id="@id/lsensor_accuracy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LSensor_default_text" />
    <TextView android:textSize="20.0dip" android:id="@id/lsensor_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LSensor_default_text" />
    <TextView android:textSize="22.0dip" android:textColor="@color/Green" android:id="@id/lsensor_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LSensor_tips" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="25.0dip" android:id="@id/lsensor_bt_ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Success" android:layout_weight="0.8" />
        <Button android:textSize="25.0dip" android:id="@id/lsensor_bt_failed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Failed" android:layout_weight="0.2" />
    </LinearLayout>
</LinearLayout>
