<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fadeScrollbars="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView 
             android:textSize="20.0dip" 
             android:textColor="#bdbdbd" 
             android:id="@id/report_success" 
             android:layout_width="wrap_content" 
             android:layout_height="wrap_content" 
             android:text="@string/values1"/>
        <TextView android:textSize="20.0dip" 
             android:textColor="#bdbdbd" 
             android:id="@id/report_failed"              
             android:layout_width="wrap_content" 
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp" 
             android:text="@string/values2"/>
        <TextView android:textSize="20.0dip" 
             android:textColor="#bdbdbd" 
             android:id="@id/report_default" 
             android:layout_width="wrap_content" 
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/values3"/>
    </LinearLayout>
</ScrollView>
