<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textColor="@color/Green" android:layout_gravity="center_horizontal" android:id="@id/keycode_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/KeyCode_info" />
    <GridView android:gravity="center" android:id="@id/keycode_grid" android:padding="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:horizontalSpacing="1.0dip" android:verticalSpacing="1.0dip" android:stretchMode="columnWidth" android:columnWidth="50.0dip" android:numColumns="auto_fit" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="25.0dip" android:id="@id/keycode_bt_ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Success" android:layout_weight="0.8" />
        <Button android:textSize="25.0dip" android:id="@id/keycode_bt_failed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Failed" android:layout_weight="0.2" />
    </LinearLayout>
</LinearLayout>
