<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/OrientText" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/MSensor_default_text" />
    <ImageView android:id="@id/ivCompass" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/compass" />
    <TextView android:textSize="13.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="right|center" android:id="@id/OrientValue" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/MSensor_default_text" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textSize="25.0dip" android:id="@id/msensor_bt_ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Success" android:layout_weight="0.8" />
        <Button android:textSize="25.0dip" android:id="@id/msensor_bt_failed" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Failed" android:layout_weight="0.2" />
    </LinearLayout>
</LinearLayout>
